# task_1

./: .gitignore  README.md  config.json  input_data.txt  result.txt
task_1_3/: AppWorkPackage.cpp  AppWorkPackage.h  CMakeLists.txt  FinalConverter.cpp  FinalConverter.h  Handler.cpp  Handler.h  InputDataExtractor.cpp  InputDataExtractor.h  InputValidation.cpp  InputValidation.h  ParamExtractor.cpp  ParamExtractor.h  ResultWriter.cpp  ResultWriter.h  main.cpp
